// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshot Renders the UI snapshot correctly 1`] = `
<button
  className="chakra-button button  css-0"
  id="button"
  onClick={[MockFunction]}
  type="button"
>
  Primary
</button>
`;

exports[`Button Snapshot Renders the UI snapshot correctly 2`] = `
<button
  className="chakra-button button  css-0"
  id="button"
  onClick={[MockFunction]}
  type="button"
>
  Seconday
</button>
`;

exports[`Button Snapshot Renders the UI snapshot correctly 3`] = `
<button
  className="chakra-button button  css-0"
  id="button"
  onClick={[MockFunction]}
  type="button"
>
  Pill
</button>
`;

exports[`Button Snapshot Renders the UI snapshot correctly 4`] = `
<button
  className="chakra-button button  css-0"
  id="button"
  onClick={[MockFunction]}
  type="button"
>
  Link
</button>
`;
